src/main/resources/css/appStore.css
/* ... */
.jps-moduleCard .card-topMain author span i {
    font-size: 16px;
    float: right;
    margin-left: 8px;
}

.jps-moduleCard .card-desc {
    display: block;
    /* Fallback for non-webkit */
    display: -webkit-box;
    max-width: 100%;
    height: 60px;
    /* Fallback for non-webkit */
    font-size: 15px;
    line-height: 1.4;
    padding-top: 10px;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

/*Module Page*/

.moduleImage {
    width: 80px;
    float: right;
    margin-top: 20px;
}

.module-section-title h2 {
    font-family: "Lato", sans-serif;
    font-size: 18px;
    font-weight: 700;
    color: #03a9f4;
    background: white;
    display: inline-block;
    padding: 2px 6px;
    margin-left: -5px;
}

.module-section-title span {
    border-bottom: 2px dotted #c1dbf3;
    width: 100%;
    display: block;
    margin-top: -17px;
    margin-bottom: 20px;
}

.btn.module-download-btn {
    border: none;
    background: #03a9f4;
    margin: 0 8px;
    text-transform: uppercase;
    font-weight: bold;
    color: #fff;
    border-radius: 2px;
    font-family: "Roboto", sans-serif;
    letter-spacing: 1px;
}

.btn.module-download-btn:hover {
    box-shadow: 0 1px 2px 0 rgba(0,0,0,.24);
}

.btn.module-download-btn:active,
.btn.module-download-btn:focus {
    background: #039BE5;
    color: #fff;
    outline: none;
}

.more-info-container {
    padding: 24px;
}

.meta-info {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: inline-block;
    padding: 8px 16px 0 0;
    text-align: left;
    vertical-align: top;
    width: 100%;
    font-family: 'Lato',sans-serif;
}

.meta-info.large {
    width: calc(40% - 4px);;
}

.meta-info .title {
    color: #333;
    font-size: 15px;
    font-weight: 600;
    margin-bottom: 2px;
}

.meta-info .content {
    line-height: 24px;
    font-size: 16px;
    font-weight: 400;
    color: rgba(0, 0, 0, 0.52);
}

.modal-link-text {
    border-bottom: dashed 1px #03A9F4;
    text-decoration: none;
    color: #03A9F4;
    cursor: pointer;
    font-size: 13px;
    font-weight: 500;
    word-spacing: 1px;
    line-height: 24px;
}

.modal-link-text:hover, .modal-link-text:focus {
    text-decoration: none;
    color: #03A9F4;
    outline: 0;
}

.meta-info.large .link {
    text-decoration: none;
    color: #03A9F4;
    cursor: pointer;
    font-size: 13px;
    font-weight: 500;
    word-spacing: 1px;
    line-height: 24px;
}

.module-tag {
    font-family: "Lato", sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    font-size: 10px;
    line-height:25px;
    color: #ffb91e;
    border-radius: 20px;
    border: 2px solid #ffb91e;
    padding: 2px 8px;
    margin: 4px;
    box-sizing: border-box;
    white-space: nowrap;
}

/*ROW SYSTEM FOR DETAILS*/
.noMargin {
    margin-left: 0;
    margin-right: 0;
}
.fifth {
    width: 20%;
    float: left;
}
@media (max-width: 768px) {
    .fifth {
        width: 100%;
    }
}
@media (min-width: 768px) {
    .navbar-right .dropdown-menu {
        min-width:400px;
    }
}

/*SCREEN SHOTS*/
.screenshot-container {
    margin: 8px;
    min-width: calc(25% - 16px);
    max-width: calc(25% - 16px);
    max-height: 120px;
    min-height: 120px;
    height: 120px;
    float: left;
}

.screenshot-container img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    overflow: hidden;
}

img[data-action="zoom"] {
    cursor: pointer;
    cursor: -webkit-zoom-in;
    cursor: -moz-zoom-in;
}
.zoom-img,
.zoom-img-wrap {
    position: relative;
    z-index: 666;
    -webkit-transition: all 300ms;
    -o-transition: all 300ms;
    transition: all 300ms;
}
img.zoom-img {
    cursor: pointer;
    cursor: -webkit-zoom-out;
    cursor: -moz-zoom-out;
}
.zoom-overlay {
    z-index: 420;
    background: #fff;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    pointer-events: none;
    filter: "alpha(opacity=0)";
    opacity: 0;
    -webkit-transition:      opacity 300ms;
    -o-transition:      opacity 300ms;
    transition:      opacity 300ms;
}
.zoom-overlay-open .zoom-overlay {
    filter: "alpha(opacity=100)";
    opacity: 1;
}
.zoom-overlay-open,
.zoom-overlay-transitioning {
    cursor: default;
}

/*FOOTER*/
.footer-2 {
    background: #282928;
    font-size: 14px;
    line-height: 1.8;
    color: rgba(255,255,255,0.25);
    text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
    position: absolute;
    /*bottom: 0;*/
    min-height: 140px;
    width: 100%;
    margin-top: 20px;
}

.footer-2 .row {
    padding: 40px 0;
}

.footer-2 a, .footer-2 p {
    color: rgba(255,255,255,0.25);
    text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
}

span.module-badge-24 i {
    font-size: 24px;
    margin-left: 8px;
}

span.module-badge-16 i {
    font-size: 16px;
    margin-left: 8px;
}

span.module-filter-badge-16 i {
    font-size: 16px;
    margin-right: 5px;
    margin-left: -10px;
    vertical-align: text-bottom;
}

span.module-tag-badge-13 i {
    font-size: 13px;
    margin-left: 5px;
    vertical-align: text-bottom;
}

span.module-badge-16.module-supported,
span.module-filter-badge-16.module-supported,
span.module-tag-badge-13.module-supported,
span.module-badge-24.module-supported {
     color: #03A9F4;
 }

span.module-badge-16.module-community,
span.module-filter-badge-16.module-community,
span.module-tag-badge-13.module-community,
span.module-badge-24.module-community {
    color: #4CAF50;
}

span.module-badge-16.module-labs,
span.module-filter-badge-16.module-labs,
span.module-tag-badge-13.module-labs,
span.module-badge-24.module-labs {
    color: #673AB7;
}

span.module-badge-16.module-prereleased,
span.module-filter-badge-16.module-prereleased,
span.module-tag-badge-13.module-prereleased,
span.module-badge-24.module-prereleased {
    color: #FF9800;
}

.align-right {
    text-align: right !important;
}

.top-5 {
     margin-top: 5px;
 }

.top-10 {
    margin-top: 10px;
}

.top-15 {
    margin-top: 15px;
}
/* ... */

